--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "BonBon Regular";
-  src: url("fonts/Bonbon-Regular.ttf") format("truetype");
+  src: url("../fonts/Bonbon-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: "Cupcake";
-  src: url("fonts/CupcakePartyDemo-46xK.ttf") format("truetype");
+  src: url("../fonts/CupcakePartyDemo-46xK.ttf") format("truetype");
 }
 
 .progress {
@@ -12,7 +12,7 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 4rem;
   font-weight: 900;
-  background-image: url("bg_timer.png");
+  background-image: url("../images/bg_timer.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -46,7 +46,7 @@ h4 {
 
 .sliding-background {
   position: fixed;
-  background: url("bg.jpg") repeat;
+  background: url("../images/bg.jpg") repeat;
   height: 1200%; /*for slide: 100%;*/
   width: 100%; /*for slide: 5100px;*/
   animation: slide2 40s linear infinite;
@@ -85,7 +85,7 @@ h4 {
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url("buttonbg_base.PNG");
+  background-image: url("../images/buttonbg_base.PNG");
   border-color: rgba(0, 0, 0, 1);
   opacity: 0;
   margin-bottom: 0.3em;
